# wizconfig

./: LICENSE  README.md  pyproject.toml
magiconfig/: __init__.py
tests/: context.py  test.py
wizconfig/: __init__.py
