[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magiconfig"
authors = [
    {name = "Matthias Reumann", email = "matthias.reumann@tum.de"},
]
description = "An easy way to validate if your config's completeness"
keywords = ["python", "configuration", "environment"]
readme = "README.md"
requires-python = ">=3.7"
version = "1.0.0"
license = {text = "MIT"}