[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wizconfig"
authors = [
    {name = "Matthias Reumann", email = "matthias.reumann@tum.de"},
]
description = "An incomplete configuration shall not pass."
keywords = ["python", "configuration", "environment"]
readme = "README.md"
requires-python = ">=3.7"
version = "1.0.2"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/ACONIO/wizconfig"
